useContext() pour lire des messages depuis un component grand-parent

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.level-a{
+  border: solid 2px red;
+  padding: 10px;
+}
+.level-b{
+  border: solid 2px rgb(0, 255, 42);
+  padding: 10px;
+}
+.level-c{
+  border: solid 2px rgba(25, 0, 255, 0.719);
+  padding: 10px;
+}
