--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+
+  body{background-color: #282c34;}
 .App {
   text-align: center;
 }
@@ -14,7 +16,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,9 +25,28 @@
   color: white;
 }
 
-.App-link {
+.App-link, h2, h2 {
   color: #61dafb;
 }
+
+button{
+  background-color: #61dafb;
+  margin-left: 1rem;
+}
+
+input, button{
+  padding: 0.5rem 1rem;
+
+}
+
+h2{
+  font-weight: 500;
+}
+p{
+  font-size: 1.2rem;
+}
+
+.row{display: flex; align-items:center;}
 
 @keyframes App-logo-spin {
   from {
